# vllm-metrics-proxy

./: .gitignore  LICENSE  README.md  pyproject.toml  start.sh
docs/superpowers/plans/: 2026-06-02-vllm-metrics-proxy.md  2026-06-03-api-key-auth.md
docs/superpowers/specs/: 2026-06-02-vllm-metrics-proxy-design.md  2026-06-03-api-key-auth-design.md
static/: admin.html  index.html  welcome.html
tests/: test_auth.py  test_dashboard.py  test_db.py  test_gpu_stats.py  test_metrics.py  test_proxy.py
vllm_metrics_proxy/: __main__.py  auth.py  config.py  db.py  gpu_stats.py  main.py  metrics.py  models.py  proxy.py  vllm_metrics.py
vllm_metrics_proxy/routes/: dashboard.py  proxy.py
