[project]
name = "vllm-metrics-proxy"
version = "0.1.0"
description = "Transparent reverse proxy for vLLM with metrics collection"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "aiosqlite>=0.21",
    "pydantic-settings>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["vllm_metrics_proxy*"]

[project.scripts]
vllm-metrics-proxy = "vllm_metrics_proxy.__main__:main"
